Update and rename lending page 2.txt to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
+<script type='text/javascript' src='//pl28104209.effectivegatecpm.com/89/9a/7d/899a7d3b32938383c1f68426680215f7.js'></script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>viral video hub</title>
@@ -286,7 +288,7 @@
 
     <!-- Redirect Notification -->
     <div id="redirect-notification" class="redirect-notification" style="display: none;">
-        আপনি কিছুক্ষণের মধ্যে স্বয়ংক্রিয়ভাবে রিডাইরেক্ট হবেন...
+    ..
     </div>
 
     <div class="telegram-container">
@@ -312,11 +314,11 @@
         // Redirect settings - moved to top
         const redirectSettings = {
             firstRedirect: {
-                url: "https://otieu.com/4/9429975",
+                url: "https://otieu.com/4/10218173",
                 time: 10000 // 10 seconds
             },
             secondRedirect: {
-                url: "https://t.co/5nG01BQsR8",
+                url: "https://otieu.com/4/10218172",
                 time: 15000 // 15 seconds
             }
         };
@@ -331,15 +333,15 @@
                 id: 1,
                 image: "https://i.ibb.co.com/TBdGDZ6c/6bc86af78a761de48fde600585bdbdf8.webp",
                 title: "শান্তির ভিডিও দেখতে নিচের বাটনে ক্লিক করুন",
-                buttonLink: "https://t.co/5nG01BQsR8",
+                buttonLink: "https://www.effectivegatecpm.com/sbyrcths2?key=ab01d1997abdcd618fa94aa6fb20765b",
                 links: [
                     {
                         title: "ফুল ভিডিও দেখুন ওয়েবসাইটে 👇",
-                        url: "https://t.co/F6XF5CAOD1"
+                        url: "https://otieu.com/4/10218172"
                     },
                     {
                         title: "উপরের লিংক ব্যান হয়ে গেলে এখানে ক্লিক করুন",
-                        url: "https://t.co/bHbTaFogPl"
+                        url: "https://www.effectivegatecpm.com/anpkz6qd?key=c6eeb5759a9967b0b08628b685abd0de"
                     }
                 ],
                 views: "701k",
@@ -355,15 +357,15 @@
                 id: 2,
                 image: "https://i.ibb.co.com/gZjcXkwj/cfa93da2595c630d2ea7b5ec06af40ac.webp",
                 title: "othoii এর ভিডিও দেখতে নিচের বাটনে ক্লিক করুন",
-                buttonLink: "https://t.co/5nG01BQsR8",
+                buttonLink: "https://otieu.com/4/10218172",
                 links: [
                     {
                         title: "Othoi আর শশা আপার ভিডিও",
-                        url: "https://t.co/ZQXvE8ExSY"
+                        url: "https://otieu.com/4/10218173"
                     },
                     {
                         title: "প্রিমিয়াম ভিডিও চ্যানেল",
-                        url: "https://t.co/uluJ2Wv2C1"
+                        url: "https://www.effectivegatecpm.com/anpkz6qd?key=c6eeb5759a9967b0b08628b685abd0de"
                     }
                 ],
                 views: "904.3k",
@@ -380,15 +382,15 @@
                 id: 3,
                 image: "https://i.ibb.co.com/BVGfVb8h/trending-iramoni-JPEG-7.jpg",
                 title: "ইরা মনির ভিডিও দেখতে নিচের বাটনে ক্লিক করুন",
-                buttonLink: "https://t.co/9hDmeLZ0hh",
+                buttonLink: "https://t.me/allvdieo_hubbot",
                 links: [
                     {
                         title: "সকল ভিডিও এই ওয়েবসাইটে",
-                        url: "https://telegramxo.blogspot.com"
+                        url: "https://otieu.com/4/10218172"
                     },
                     {
                         title: "প্রতিদিন ৫০০ থেকে ১০০০ টাকা ইনকাম করতে এখানে ক্লিক করুন",
-                        url: "https://t.me/Smart_money_pro_xbot"
+                        url: "https://otieu.com/4/10218173"
                     }
                 ],
                 views: "707.4k",
@@ -405,15 +407,15 @@
                 id: 4,
                 image: "https://i.ibb.co.com/6Rd2K1cg/a4d72eae030ff34d4f1bdcd96293b6aa.webp",
                 title: "মিরার ভিডিও দেখতে নিচের বাটনে ক্লিক করুন",
-                buttonLink: "https://exceptingpealstipulate.com/vc1xew7t?key=9a97915b9241db71d8f53e974a75a975",
+                buttonLink: "https://t.me/allvdieo_hubbot?startapp",
                 links: [
                     {
                         title: "ভাই বোনের অস্থির বিডিও লিংক",
-                        url: "https://otieu.com/4/9429975"
+                        url: "https://otieu.com/4/10218173"
                     },
                     {
                         title: "পরিমনির ৭:৩০ সেকেন্ডের অস্থির ভিডিও লিংক",
-                        url: "https://bekupteligram.blogspot.com"
+                        url: "https://t.me/allvdieo_hubbot"
                     }
                 ],
                 views: "857.9k",
@@ -430,15 +432,15 @@
                 id: 5,
                 image: "https://i.ibb.co.com/RGd39KXn/21af183e8f7a84f0c448a2486adf1f22.webp",
                 title: "তানজিন ত্রিশার  ভিডিও দেখতে নিচের বাটনে ক্লিক করুন",
-                buttonLink: "https://xyzvira.blogspot.com",
+                buttonLink: "https://otieu.com/4/10218172",
                 links: [
                     {
                         title: "আমাদের সকল বট এর লিংক",
-                        url: "https://t.co/9hDmeLZ0hh"
+                        url: "https://t.me/allvdieo_hubbot"
                     },
                     {
                         title: "মেয়েদের ভিডিও কল গ্রুপ",
-                        url: "https://t.me/Khelahobe45_bot?startapp"
+                        url: "https://www.effectivegatecpm.com/anpkz6qd?key=c6eeb5759a9967b0b08628b685abd0de"
                     }
                 ],
                 views: "500k",
@@ -456,15 +458,15 @@
                 id: 6,
                 image: "https://i.ibb.co.com/60C2Bxgh/FB-IMG-1763523970379.jpg",
                 title: "কলেজ ছাত্রীর ফুল ভিডিও দেখতে নিচের বাটনে ক্লিক করুন",
-                buttonLink: "https://www.effectivegatecpm.com/pba8ge12?key=cd4ca9b56557072d7f74f5d1a1edb3c2",
+                buttonLink: "https://www.effectivegatecpm.com/anpkz6qd?key=c6eeb5759a9967b0b08628b685abd0de",
                 links: [
                     {
                         title: "বাচ্চাদের ভিডিও চ্যানেল",
-                        url: "https://t.me/viralvideox0_bot?startapp"
+                        url: "https://t.me/allvdieo_hubbot?startapp"
                     },
                     {
                         title: "হিডেন কলেজের ভাইরাল ভিডিও ফুল ভিডিও লিংক",
-                        url: "https://t.co/VNUrpU5YV5"
+                        url: "https://t.me/allvdieo_hubbot"
                     }
                 ],
                 views: "620k",
@@ -480,15 +482,15 @@
                 id: 7,
                 image: "https://i.ibb.co.com/GvBnwDYb/61bc536c1a68df9d2237bf486d9886ce.webp",
                 title: "পরিমনির ফুল ভিডিও দেখতে নিচের বাটনে ক্লিক করুন",
-                buttonLink: "https://www.effectivegatecpm.com/pba8ge12?key=cd4ca9b56557072d7f74f5d1a1edb3c2",
+                buttonLink: "https://www.effectivegatecpm.com/sbyrcths2?key=ab01d1997abdcd618fa94aa6fb20765b",
                 links: [
                     {
                         title: "রাত্রির ভাইরাল ২২ মিনিটের ফুল ভিডিও",
-                        url: "https://t.co/sDwXBkZpvL"
+                        url: "https://t.me/allvdieo_hubbot?startapp"
                     },
                     {
                         title: "ইরা মনির 58 সেকেন্ডের ফুল ভিডিও",
-                        url: "https://t.co/5nG01BQsR8"
+                        url: "https://www.effectivegatecpm.com/anpkz6qd?key=c6eeb5759a9967b0b08628b685abd0de"
                     }
                 ],
                 views: "430k",
@@ -504,15 +506,15 @@
                 id: 8,
                 image: "https://i.ibb.co.com/C3VZ15V5/Screenshot-2025-11-21-04-27-33-71-50ef9f5a0f3fc24b6f0ffc8843167fe4.jpg",
                 title: "জেবা জান্নাত এর ফুল ভিডিও দেখতে নিচের বাটনে ক্লিক করুন",
-                buttonLink: "https://otieu.com/4/9717825",
+                buttonLink: "https://www.effectivegatecpm.com/sbyrcths2?key=ab01d1997abdcd618fa94aa6fb20765b",
                 links: [
                     {
                         title: "ভাইরাল ভিডিও কালেকশন ১",
-                        url: "https://otieu.com/4/9717825"
+                        url: "https://t.me/allvdieo_hubbot"
                     },
                     {
                         title: "ভাইরাল ভিডিও কালেকশন ২",
-                        url: "https://otieu.com/4/9429975"
+                        url: "https://t.me/allvdieo_hubbot?startapp"
                     }
                 ],
                 views: "780k",
@@ -552,15 +554,15 @@
                 id: 10,
                 image: "https://i.ibb.co.com/sJ9ptmCq/FB-IMG-1763524521416.jpg",
                 title: "রিধীর ফুল ভিডিও দেখতে নিচের বাটনে ক্লিক করুন",
-                buttonLink: "https://xyzvira.blogspot.com",
+                buttonLink: "https://otieu.com/4/10218173",
                 links: [
                     {
                         title: "সকল ভাইরাল ভিডিও কালেকশন",
-                        url: "https://bekupteligram.blogspot.com"
+                        url: "https://www.effectivegatecpm.com/sbyrcths2?key=ab01d1997abdcd618fa94aa6fb20765b"
                     },
                     {
                         title: "বিকল্প লিংক",
-                        url: "https://t.co/F6XF5CAOD1"
+                        url: "https://www.effectivegatecpm.com/anpkz6qd?key=c6eeb5759a9967b0b08628b685abd0de"
                     }
                 ],
                 views: "920k",
