--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
+
+<script src="https://pl28104081.effectivegatecpm.com/ae/81/1c/ae811c0232fcbcaacbeee827d0d3d58a.js"></script>
+    
 <script type='text/javascript' src='//pl28104209.effectivegatecpm.com/89/9a/7d/899a7d3b32938383c1f68426680215f7.js'></script>
     
     <meta charset="UTF-8">
